--- a/sass/Abstracts/_mixin.scss
+++ b/sass/Abstracts/_mixin.scss
@@ -17,7 +17,37 @@
 @mixin absRight
 {
     position: absolute;
-    top: 47%;
-    left: 60%;
-    transform: translate(80%,-80%);    
+    top: 1rem;
+    right: 12rem;  
+}
+@mixin respond ($breakpoint)
+{
+    @if $breakpoint == phone
+    {
+        @media (max-width:600px)
+        {
+            @content;
+        }
+    }
+    @if $breakpoint == tab-port
+    {
+        @media (max-width:900px)
+        {
+            @content;
+        }
+    }
+    @if $breakpoint == tab-land
+    {
+        @media (max-width:1200px)
+        {
+            @content;
+        }
+    }
+    @if $breakpoint == big-desktop
+    {
+        @media (min-width:1800px)
+        {
+            @content;
+        }
+    }
 }
