--- a/sass/Base/_base.scss
+++ b/sass/Base/_base.scss
@@ -9,6 +9,22 @@
 html
 {
     font-size: 62.5%;
+    @include respond (phone)
+    {
+        font-size: 40%;
+    }
+    @include respond (tab-land)
+    {
+        font-size: 56.25%;
+    }
+    @include respond (tab-port)
+    {
+        font-size: 50%;
+    }
+    @include respond (big-desktop)
+    {
+        font-size: 100%;
+    }
 }
 body
 {
