--- a/sass/Components/_button.scss
+++ b/sass/Components/_button.scss
@@ -10,11 +10,21 @@
         border-radius: 100px;
         font-size: 1.6rem;
         position: relative;
+        @include respond (phone)
+        {
+            font-size: 1rem;
+            padding: 0.5rem 1rem;
+        } 
     }
     &--white
     {
         color: $color-text;
         background-color: $color-white;
+        @include respond (phone)
+        {
+            font-size: 1rem;
+            padding: 0.5rem 1rem;
+        } 
     }
     &:hover
     {
@@ -65,6 +75,11 @@
         border-bottom: 1px solid $color-primary-dark;
         padding: .3rem;
         font-size: $default-font-size;
+        @include respond (phone)
+        {
+            font-size: 1rem;
+            padding: 0.5rem 1rem;
+        } 
     }
     &:hover
     {
