--- a/sass/Components/_card.scss
+++ b/sass/Components/_card.scss
@@ -6,6 +6,18 @@
     width: 90%;
     margin-bottom: -4.5rem;
     margin-top: -7rem;
+    @include respond (big-desktop)
+    {
+        width: 105%;
+        margin-bottom: -3rem;
+    } 
+    @include respond (phone)
+    {
+        width: 105%;
+        margin-left: -2.5rem;
+        margin-bottom: -11rem;
+    }       
+    
     &__side
     {
         color: $color-white;
@@ -19,6 +31,15 @@
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
         border-radius: 5rem;
         overflow: hidden;
+        @include respond (big-desktop)
+        {
+            height: 45rem;
+            left: 0;
+        }
+        @include respond (phone)
+        {
+            height: 37rem;
+        }            
         &--front
         {
             background-color: $color-white;
@@ -73,6 +94,14 @@
         top: 12rem;
         right: 2rem;
         width: 75%;
+        @include respond (big-desktop)
+        {
+            font-size: 3.5rem;
+        }  
+        @include respond (phone)
+        {
+            font-size: 1.5rem;
+        }    
     }
     &__heading-span
     {
@@ -113,6 +142,15 @@
                 text-align: center;
                 font-size: 1.7rem;
                 padding: 1rem;
+                @include respond (big-desktop)
+                {
+                    font-size: 2rem;
+                    margin-top: 1rem;
+                } 
+                @include respond (phone)
+                {
+                    font-size: 1.3rem;
+                }                     
                 &:not(:last-child)
                 {
                     border-bottom: 0.5px solid $color-text;
