--- a/sass/Components/_favorite.scss
+++ b/sass/Components/_favorite.scss
@@ -11,7 +11,14 @@
     border-radius: 100rem;
     background-color: rgba($color-white, .1);
     color: $color-black;
-
+    @include respond (big-desktop)
+    {
+        font-size: 2rem;
+    }   
+    @include respond (phone)
+    {
+        font-size: 1.3rem;
+    }   
     &__shape
     {
         width: 12rem;
@@ -22,6 +29,18 @@
         clip-path: circle(50% at 50%);
         transform: translateX(-3rem);
         shape-outside: circle(50% at 50% 50%);
+        @include respond (big-desktop)
+        {
+            width: 15rem;
+            height: 15rem;
+            margin-top: 1rem;
+        }
+        @include respond (phone)
+        {
+            width: 10rem;
+            height: 10rem;
+            margin-top: 1rem;
+        }     
     }
     &__img
     {
