--- a/sass/Components/_navigation.scss
+++ b/sass/Components/_navigation.scss
@@ -1,5 +1,9 @@
 .navigation
 {
+    @include respond (phone)
+    {
+        visibility: hidden;
+    } 
     &__checkbox
     {
         display: none;
@@ -20,8 +24,9 @@
     }
     &__background
     {
-        background-image: linear-gradient(to right bottom, rgba(93, 92, 97,0.5), rgba(216, 195, 165,0.8)), 
-    url("/img/background1.jpg");
+        background-image: linear-gradient(to right bottom, 
+        rgba(93, 92, 97,0.5), rgba(216, 195, 165,0.8)), 
+        url("/img/background1.jpg");
         height: 6rem;
         width: 6rem;
         position: fixed;
@@ -29,27 +34,27 @@
         right: 6.5rem;
         border-radius: 50%;
         z-index: 1000;
-        transition: transform .8s;
+        transition: transform .5s;
     }
     &__checkbox:checked~&__background
     {
-        transform: scale(15);
+        transform: scale(13);
     }
     &__checkbox:checked~&__nav
     {
         opacity: 1;
-        width: 100%;
+        visibility:visible;
     }
     &__nav
     {
-        height: 100vh;
-        width: 0;
+        width: 40rem;
         position: fixed;
         top: 0;
         right: 0;
         z-index: 1500;
-        transition: all .8s;
+        transition: all .2s;
         opacity: 0;
+        visibility: hidden;
     }
     &__list
     {
@@ -78,7 +83,7 @@
             $color-white 50%,
             transparent 50%);
             background-size: 252%;
-            transition: all .4s;
+            transition: all .2s;
         }
         &:hover,
         &:active
