--- a/sass/Components/_skill-box.scss
+++ b/sass/Components/_skill-box.scss
@@ -9,6 +9,25 @@
     margin-top: 10rem;
     width: 90%;
     transition: all .2s;
+    @include respond (big-desktop)
+    {
+        font-size: 2.5rem;
+    }    
+    @include respond (tab-port)
+    {
+        width: 80%;
+        margin-left: 2.5rem;
+    }
+    @include respond (tab-land)
+    {
+        width: 80%;
+        margin-left: 2.5rem;
+    }
+    @include respond (phone)
+    {
+        width: 90%;
+        margin-left: 0.5rem;
+    }  
     &__icon
     {
         font-size: 6rem;
