--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -16,30 +16,36 @@
     {
         width: 10rem;
         height: auto;
+        @include respond (phone)
+        {
+            width: 7rem;
+        } 
     }
     &__copyright
     {
         border-top: 1px solid $color-primary-light;
         padding-top: 2rem;
-        width: 70%;
         float: right;
-        margin-right: 10rem;
+        margin-right: 8rem;
     }
     &__navigation
     {
         border-top: 1px solid $color-primary-light;
         padding-top: 2rem;
         display: inline-block;
+        margin-left: 11rem;
+        @include respond (phone)
+        {
+            visibility: hidden;
+        } 
     }
     &__list
     {
         list-style: none;
-        margin-left: 10rem;
     }
     &__item
     {
         display: inline-block;
-
         &:not(:last-child)
         {   
             margin-right: 3rem;
