--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -27,6 +27,10 @@
     position: relative;
     padding: 5rem 0;
     height: 70rem;
+    @include respond (big-desktop)
+    {
+        height: 80rem;
+    }
 }
 .section-contact
 {
