--- a/sass/Abstracts/_mixin.scss
+++ b/sass/Abstracts/_mixin.scss
@@ -22,6 +22,13 @@
 }
 @mixin respond ($breakpoint)
 {
+    @if $breakpoint == miniphone
+    {
+        @media (max-width:400px)
+        {
+            @content;
+        }
+    }
     @if $breakpoint == phone
     {
         @media (max-width:600px)
