--- a/sass/Components/_favorite.scss
+++ b/sass/Components/_favorite.scss
@@ -18,7 +18,12 @@
     @include respond (phone)
     {
         font-size: 1.3rem;
-    }   
+    } 
+    @include respond (miniphone)
+    {
+        font-size: 1rem;
+        margin-bottom: 5rem;
+    }     
     &__shape
     {
         width: 12rem;
@@ -40,6 +45,13 @@
             width: 10rem;
             height: 10rem;
             margin-top: 1rem;
+        } 
+        @include respond (miniphone)
+        {
+            width: 8rem;
+            height: 8rem;
+            margin-top: 1rem;
+            margin-left: 2rem;
         }     
     }
     &__img
