--- a/sass/Components/_form.scss
+++ b/sass/Components/_form.scss
@@ -5,6 +5,10 @@
         margin-bottom: 2rem;
         margin-top: 2rem;
         width: 60%;
+        @include respond (miniphone)
+        {
+            width: 100%;
+        }  
     }
     &__input
     {
@@ -21,6 +25,10 @@
         @include respond (phone)
         {
             width: 70%;
+        } 
+        @include respond (miniphone)
+        {
+            width: 100%;
         }    
         &:focus
         {
