--- a/sass/Components/_popup.scss
+++ b/sass/Components/_popup.scss
@@ -12,8 +12,8 @@
     transition: all .5s;
     &__img
     {
-        width: 35rem;
-        height: 40rem;
+        width: 100%;
+        height: 65vh;
         display: block
     }
     &__content
@@ -24,6 +24,7 @@
         border-radius: 3rem;
         overflow: hidden;
         opacity: 0;
+        transform: translate(-50%,-50%) scale(.5);
     }
     &__left
     {
@@ -40,7 +41,7 @@
     &__text
     {
         font-size: 1.8rem;
-        margin-bottom: 2rem;
+        margin-bottom: 4rem;
         column-count: 2;
         column-gap: 4rem;
         column-rule: 1px solid $color-primary-light;
