--- a/sass/Components/_skill-box.scss
+++ b/sass/Components/_skill-box.scss
@@ -27,7 +27,15 @@
     {
         width: 90%;
         margin-left: 0.5rem;
-    }  
+        padding: 1rem 1rem;
+    } 
+    @include respond (miniphone)
+    {
+        width: 90%;
+        margin-left: 0.5rem;
+        padding: 1rem 1rem;
+        font-size: 1.3rem;
+    } 
     &__icon
     {
         font-size: 6rem;
@@ -36,6 +44,11 @@
         background-image: linear-gradient(to right,$color-primary-light, $color-primary-dark);
         -webkit-background-clip: text;
         color: transparent;
+        @include respond (phone)
+        {
+            font-size: 4rem;
+            margin-bottom: 1rem
+        } 
     }
     &:hover
     {
