--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -27,6 +27,15 @@
         padding-top: 2rem;
         float: right;
         margin-right: 8rem;
+        @include respond (miniphone)
+        {
+            text-align: center;
+            margin-right: 5rem;
+        } 
+        @include respond (phone)
+        {
+            width: 135%;
+        } 
     }
     &__navigation
     {
