--- a/sass/Base/_animation.scss
+++ b/sass/Base/_animation.scss
@@ -28,3 +28,13 @@
         transform: translateY(0);
     }
 }
+@keyframes growth {
+    from {
+        opacity: 0;
+        height: calc(var(--percent) - 50%);
+    }
+    to {
+        opacity: 1;
+        height: var(--percent);
+    }
+}
