--- a/sass/Components/_popup.scss
+++ b/sass/Components/_popup.scss
@@ -19,7 +19,8 @@
     &__content
     {
         @include absCenter;
-        width: 75%;
+        width: 70%;
+        height: 60%;
         background-color: $color-white;
         border-radius: 3rem;
         overflow: hidden;
