--- a/sass/Base/_base.scss
+++ b/sass/Base/_base.scss
@@ -1,15 +1,17 @@
-*,
-*::before,
-*::after
+*
 {
-    margin:0;
     padding: 0;
-    box-sizing: inherit;
+    margin: 0;
+    box-sizing: border-box;
 }
 html
 {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    @include respond (miniphone)
+    {
+        font-size: 30%;
+    }
     @include respond (phone)
     {
         font-size: 40%;
