--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -1,51 +1,20 @@
 .header
 {
-    background-image: linear-gradient(to right bottom,
-    rgba($color-primary-dark,0.5), rgba($color-primary-light,0.8)), 
-    url("/img/background1.jpg");
-    clip-path: polygon(0 0, 100% 3%, 100% 90%, 0 94%);
-    background-size: cover;
-    background-position: top;
-
+    display: flex;
     position: relative;
     height: 100vh;
-
+    background-image:
+    url("/img/background1.jpg");
+    background-size: cover;
+    background-position: top;
     &__text-box
     {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
+        margin: auto;
         text-align: center;
-        @include respond (big-desktop)
-        {
-        }
-        @include respond (phone)
-        {
-        }
-        @include respond (tab-land)
-        {
-        }
-        @include respond (tab-port)
-        {
-        }
     } 
     &__logo
     {
         height: 7rem;
-        @include respond (big-desktop)
-        {
-            height: 10rem;
-        }
-        @include respond (phone)
-        {
-            height: 5rem;
-        }  
     }   
-    &__logo-box
-    {
-        position: absolute ;
-        top: 3rem;
-        left: 3rem;
-    }    
+   
 }
